--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
 
                     <div class="p-3 bg-red-400 rounded-lg mt-10">
-                        <h1 class="text-2xl text-center font-bold text-white mb-5">Get A Discount OFF 30%</h1>
+                        <h1 class="text-2xl text-center font-bold text-white mb-5">Use "DISCO30" to get 30% OFF</h1>
                         <input type="text" name="" id="promo-field" placeholder="Enter The Promo Code"
                             class="w-full mb-5 text-xl p-4 rounded-lg">
                         <button type="submit" id="apply-btn"
